Sat Apr  7 16:00:48 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* tests: Added a new rtems_init.c file.  Thanks to Joel Sherrill
 	  <joel@OARcorp.com> for contributing this port.

	* include/makeinclude: Added the new platform_rtems.x_g++.GNU file.
	* ace: Added the new config-rtems.h file.

	* ace/OS.cpp: Added support for RTEMS, which is an open-source
	  real-time operating system that can be downloaded from
 	  ftp://ftp.oarcorp.com/pub/rtems.  Thanks to Joel Sherrill
 	  <joel@OARcorp.com> for contributing this port.

	* ace/OS.cpp: The return type for ACE_OS::readv_emulation()
	  should have been ssize_t, not int, to be consistent with its
 	  definition in the header file.  Thanks to Joel Sherrill
 	  <joel@OARcorp.com> for reporting this.
  
Sat Apr  7 21:16:49 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_run_tests.lst:
          Add the new Crash_On_Write and MT_Timeout tests to the nightly
          builds.

Fri Apr  6 21:02:05 2001  Carlos O'Ryan  <coryan@uci.edu>

        * examples/Synch/proc_sema.cpp:
          Add missing #include for "ace/Log_Msg.h", on platforms that
          define ACE_TEMPLATES_REQUIRE_SOURCE this include is magically
          obtained, but this is not the case for SunCC 4.2, and
          True64/CXX.

Fri Apr 06 16:22:24 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/SString.h (ACE_Tokenizer): Updated documentation and added
          some examples.  Thanks to Jody Hagins <jody@atdesk.com> for
          providing the original example.

Fri Apr  6 17:11:34 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * bin/auto_run_tests.lst: Added the Single_Read test to the
          nightly build list.

Fri Apr  6 14:45:52 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Basic_Types.h:
        * ace/Basic_Types.cpp:
          Changed the as_string() method to avoid using floor() which
          required math.h and ACE_CString which caused unnecessary coupling.
