@@ -11535,7 +11535,6 @@ Thu Jan 11 14:02:25 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
         * tao/GIOP_Message_Generator_Parser_Impl.h: Made check_revision ()
           a static method.
 
-
         * tao/Pluggable.h:
         * tao/Pluggable.i: Added a new call read () that does a
           non-blocking read on the socket.
